--- a/k8s/base/api-gateway.yaml
+++ b/k8s/base/api-gateway.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: api-gateway
-          image: api-gateway:latest # We will build this image
+          image: ghcr.io/rimalklola/api-gateway:latest
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
