--- a/k8s/base/inventory-service.yaml
+++ b/k8s/base/inventory-service.yaml
@@ -18,7 +18,8 @@ spec:
     spec:
       containers:
         - name: inventory-service
-          image: inventory-service:latest
+          image: ghcr.io/rimalklola/inventory-service:latest
+          
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8081
